<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World! Next up, an awesome Action Bar!</string>
    <string name="app_name">Test All</string>
    <string name="version_number">Version 1.2.0</string>
    <string name="welcome_text">This application exists in order to test Android capabilities in the following activities. Hope they work!</string>
    <string name="action_bar">Action Bar</string>
    <string name="changelog">Changelog</string>
    <string name="settings">Settings</string>
    <string name="action_bar_about">This activity will test some capabilities of the Action Bar. Full use of the Action Bar will start in this Activity, but will eventually spread to the rest of the application. Also, turn this phone sideways to see some more Action Bar features.</string>
    <string name="settings_text">There is nothing to set yet. However, expect there to be a Test regarding the Settings of this app.</string>
    <string name="action_bar_body">Don\'t look here, look up there. That\'s where all the action is.\nSee what I did there&#8230;</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="graphics">Graphics</string>
    <string name="graphics_title">Cool Animation!!!</string>
    <string name="graphics_text">Super cool animations will be here soon!</string>
    <string name="graphics_about">This Activity deals with some cool Animations, which are yet to come.</string>
    
    
</resources>