<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/actionBarInfo_menu_item"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom" ></item>
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="always" ></item>
    <item
        android:id="@+id/actionBar_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:showAsAction="always|withText"></item>
    <item
        android:id="@+id/actionBar_herp"
        android:title="Herp"></item>
    <item
        android:id="@+id/actionBar_derp"
        android:title="Derp" ></item>
</menu>