<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background2" >
    <TextView
        android:text="@string/graphics_title"
        android:textSize="@dimen/title_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text" />
    <TextView
        android:text="@string/graphics_text"
        android:textSize="@dimen/text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text"
        android:padding="6dp" />
    <Button
        android:id="@+id/Button_Graphics_Back"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:onClick="onGraphicsBackButtonClick" />

</LinearLayout>