<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background2" >
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/TextView_Title"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text"
        android:textSize="@dimen/title_size"
        android:gravity="center|top" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Title"
        android:text="@string/welcome_text"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/TextView_Welcome" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Welcome"
        android:id="@+id/ImageView_Divider"
        android:src="@drawable/divider"
        android:padding="6dp" />
    <ScrollView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/ImageView_Divider"
        android:id="@+id/ScrollView_Main"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" >
            <Button
                android:id="@+id/Button_ActionBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/action_bar"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:onClick="onActionBarButtonClick" />
            <Button
                android:id="@+id/Button_Graphics"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/graphics"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:onClick="onGraphicsButtonClick" />
            <Button
                android:id="@+id/Button_Fragments"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/fragments"
                android:textColor="@color/text"
                android:layout_gravity="center"
                android:onClick="onFragmentsButtonClick" />
            
        </LinearLayout>
    </ScrollView>
   	<RelativeLayout
   	    android:layout_height="wrap_content" 
   		android:layout_width="match_parent"
   		android:layout_alignParentBottom="true"
  	 	android:background="@color/background1" >
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/version_number"
		    android:textColor="@color/text"
		    android:textSize="@dimen/text_size"
		    android:gravity="center" />
       </RelativeLayout>
</RelativeLayout>